Add Prettier and prettify JS code

--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "react-dom": "^16.5.0",
     "react-scripts": "^1.1.5"
   },
+  "devDependencies": {
+    "prettier": "^1.14.2"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "prettify": "prettier --write src/**/*.js"
   }
 }
