--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "prettify": "prettier --write src/**/*.js"
+    "prettify": "prettier --write src/*.js src/**/*.js"
   }
 }
