--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "^16.5.0",
+    "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5"
