--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.3",
     "dotenv": "^6.0.0",
     "firebase": "^5.4.2",
+    "immutability-helper": "^2.7.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "react": "^16.5.0",
