--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-alert-template-basic": "^1.0.0",
     "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.5.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^1.1.5",
     "react-transition-group": "^2.4.0"
