--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "firebase": "^5.4.2",
     "immutability-helper": "^2.7.1",
     "lodash": "^4.17.10",
+    "memoize-one": "^4.0.2",
     "moment": "^2.22.2",
     "react": "^16.5.0",
     "react-alert": "^4.0.4",
