--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.10",
     "memoize-one": "^4.0.2",
     "moment": "^2.22.2",
+    "rc-slider": "^8.6.2",
     "react": "^16.5.0",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
