--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.3",
+    "heap": "^0.2.6",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
     "moment": "^2.22.2",
+    "quickselect": "^2.0.0",
     "rc-slider": "^8.6.3",
     "react": "^16.5.2",
     "react-alert": "^4.0.4",
