--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "firebase": "^5.5.2",
+    "firebase": "^5.5.3",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
@@ -13,7 +13,7 @@
     "react": "^16.5.2",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
-    "react-date-range": "^0.9.4",
+    "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.5.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
