Upgrade CRA from 1.x -> 2

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-dom": "^16.5.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
+    "react-scripts": "^2.0.4",
     "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
@@ -29,5 +29,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write src/*.js src/**/*.js"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
