--- a/package.json
+++ b/package.json
@@ -4,24 +4,24 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
-    "firebase": "^5.4.2",
-    "immutability-helper": "^2.7.1",
-    "lodash": "^4.17.10",
+    "firebase": "^5.5.3",
+    "immutability-helper": "^2.8.1",
+    "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
     "moment": "^2.22.2",
-    "rc-slider": "^8.6.2",
-    "react": "^16.5.0",
+    "rc-slider": "^8.6.3",
+    "react": "^16.5.2",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
     "react-date-range": "^1.0.0-beta",
-    "react-dom": "^16.5.0",
+    "react-dom": "^16.5.2",
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^1.1.5",
-    "react-transition-group": "^2.4.0"
+    "react-scripts": "^2.0.4",
+    "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
-    "prettier": "^1.14.2"
+    "prettier": "^1.14.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +29,11 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "prettify": "prettier --write src/*.js src/**/*.js"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
