--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
+    "eslint-config-prettier": "^3.1.0",
+    "eslint-plugin-prettier": "^3.0.0",
     "prettier": "^1.14.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject",
+    "lint": "eslint src",
     "prettify": "prettier --write src/*.js src/**/*.js"
   },
   "browserslist": [
