--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/react-button": "^0.5.0",
     "@material/react-card": "^0.5.0",
     "firebase": "^5.5.3",
     "heap": "^0.2.6",
