--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@material/react-card": "^0.5.0",
     "firebase": "^5.5.3",
     "heap": "^0.2.6",
+    "immer": "^1.7.2",
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
@@ -27,12 +28,13 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "node-sass": "^4.9.3",
-    "prettier": "^1.14.3"
+    "prettier": "^1.14.3",
+    "react-app-rewired": "^1.6.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "lint": "eslint src",
     "prettify": "prettier --write src/*.js src/**/*.js"
   },
