--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
+    "classnames": "^2.2.6",
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "node-sass": "^4.9.3",
