--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
   "dependencies": {
     "@material/react-button": "^0.5.0",
     "@material/react-card": "^0.5.0",
+    "apollo-cache-inmemory": "^1.3.5",
+    "apollo-client": "^2.4.2",
+    "apollo-link": "^1.2.3",
+    "apollo-link-error": "^1.1.1",
+    "apollo-link-http": "^1.5.5",
     "firebase": "^5.5.3",
+    "graphql": "^14.0.2",
+    "graphql-tag": "^2.10.0",
     "heap": "^0.2.6",
     "immer": "^1.7.2",
     "immutability-helper": "^2.8.1",
@@ -17,6 +24,7 @@
     "react": "^16.5.2",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
+    "react-apollo": "^2.2.4",
     "react-date-range": "^1.0.0-beta",
     "react-dom": "^16.5.2",
     "react-loading": "^2.0.3",
