--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-link": "^1.2.3",
     "apollo-link-error": "^1.1.1",
     "apollo-link-http": "^1.5.5",
+    "date-fns": "^1.29.0",
     "firebase": "^5.5.3",
     "graphql": "^14.0.2",
     "graphql-tag": "^2.10.0",
