--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material/react-button": "^0.5.0",
     "@material/react-card": "^0.5.0",
+    "@material/react-text-field": "^0.5.1",
     "apollo-cache-inmemory": "^1.3.5",
     "apollo-client": "^2.4.2",
     "apollo-link": "^1.2.3",
