--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "immutability-helper": "^2.8.1",
     "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
+    "pepjs": "^0.4.3",
     "quickselect": "^2.0.0",
     "react": "^16.5.2",
     "react-alert": "^4.0.4",
