Add long press to start selection on iOS

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.4",
+    "react-touch": "^0.4.4",
     "react-transition-group": "^2.5.0"
   },
   "devDependencies": {
