--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-scripts": "^2.0.5",
     "react-touch": "^0.4.4",
     "react-transition-group": "^2.5.0",
-    "redux": "^4.0.1"
+    "redux": "^4.0.1",
+    "redux-persist": "^5.10.0"
   },
   "devDependencies": {
     "classnames": "^2.2.6",
