--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material/react-tab": "^0.5.0",
     "@material/react-tab-bar": "^0.5.0",
     "@material/react-text-field": "^0.5.1",
+    "@material/typography": "^0.40.1",
     "apollo-cache-inmemory": "^1.3.6",
     "apollo-client": "^2.4.3",
     "apollo-link": "^1.2.3",
