--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material/react-button": "^0.5.0",
     "@material/react-card": "^0.5.0",
+    "@material/react-fab": "^0.5.0",
     "@material/react-material-icon": "^0.5.0",
     "@material/react-tab": "^0.5.0",
     "@material/react-tab-bar": "^0.5.0",
