Implement top bar menu on small screens

--- a/package.json
+++ b/package.json
@@ -3,11 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material/menu": "^0.40.1",
     "@material/react-button": "^0.6.1",
     "@material/react-card": "^0.6.1",
     "@material/react-icon-button": "^0.6.1",
     "@material/react-layout-grid": "^0.6.1",
+    "@material/react-list": "^0.6.1",
     "@material/react-material-icon": "^0.6.1",
+    "@material/react-menu-surface": "^0.6.1",
     "@material/react-tab": "^0.6.1",
     "@material/react-tab-bar": "^0.6.1",
     "@material/react-text-field": "^0.6.1",
