Implement ShowResponse bottom bar
Squashed commit of the following:

commit 2cd5fe748a76bc2e13f42cff55bc803750c01765
Author: E-Liang Tan <eliang@eliangtan.com>
Date:   Sun Oct 28 11:06:03 2018 +0800

    Prettify code

commit 19054f6790ccf655a8988f0c1cffb1bda436887c
Merge: 17ac8f0 50c5b2a
Author: E-Liang Tan <eliang@eliangtan.com>
Date:   Sun Oct 28 10:57:45 2018 +0800

    Merge branch 'master' into bottom-barify

commit 17ac8f062c740cab44f31bea97577077a34ce76d
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Thu Oct 25 11:08:35 2018 +0800

    updated fab css

commit aa0df399b4f1e95aa0321383ac43121ef1426a95
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Thu Oct 25 01:13:51 2018 +0800

    partially refactored bottom bar in respond page, beautified bottom app bar, added fab with extensible onClick

commit 2007c9c151ea83bf0c6c1ca79003e9bc8adca63d
Merge: 7375d1e 561a5b5
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 23:16:07 2018 +0800

    Merge branch 'master' into bottom-barify

commit 7375d1ebb3d666b10213aec4f7c9ec1e41d02c63
Merge: 8e93fcf 2d74fd0
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 20:45:35 2018 +0800

    Merge branch 'master' into bottom-barify

commit 8e93fcf62e21e8d2e93674362c55f6fe088bf1d3
Merge: 1fdfe3c 353cf5d
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 20:44:36 2018 +0800

    Merge branch 'bottom-barify' of https://github.com/WotFace/ShowFace into bottom-barify

commit 353cf5d64d408719d5e9dc0c36aea388f393e529
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 00:40:33 2018 +0800

    ab

commit 06738b33fee2b4d4ce829ae89328e77ea3cd9f78
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 00:36:20 2018 +0800

    some fixes

commit 832474bcf70a2e68b23208d4e9dc59c06a893b83
Author: Anthony Tantra <tantra.anthony@gmail.com>
Date:   Wed Oct 24 00:06:03 2018 +0800

    refined bottom bar stuff

commit 00e666d3dba417e5e5c4bbad7c9

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material/menu": "^0.40.1",
     "@material/react-button": "^0.6.1",
     "@material/react-card": "^0.6.1",
+    "@material/react-fab": "^0.6.1",
     "@material/react-icon-button": "^0.6.1",
     "@material/react-layout-grid": "^0.6.1",
     "@material/react-list": "^0.6.1",
@@ -43,7 +44,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.5",
     "react-touch": "^0.4.4",
-    "react-transition-group": "^2.5.0",
+    "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0"
   },
