--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^16.6.0",
     "react-ga": "^2.5.3",
     "react-loading": "^2.0.3",
+    "react-multi-email": "^0.3.8",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.0.5",
