--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material/menu": "^0.40.1",
+    "@material/radio": "^0.40.1",
     "@material/react-button": "^0.6.1",
     "@material/react-card": "^0.6.1",
     "@material/react-fab": "^0.6.1",
@@ -33,6 +34,7 @@
     "pepjs": "^0.4.3",
     "query-string": "^6.2.0",
     "quickselect": "^2.0.0",
+    "rc-time-picker": "^3.4.0",
     "react": "^16.6.0",
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
