--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@material/react-list": "^0.6.1",
     "@material/react-material-icon": "^0.6.1",
     "@material/react-menu-surface": "^0.6.1",
+    "@material/react-select": "^0.6.1",
     "@material/react-tab": "^0.6.1",
     "@material/react-tab-bar": "^0.6.1",
     "@material/react-text-field": "^0.6.1",
