--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 REACT_APP_FIREBASE_API_KEY=
 REACT_APP_API_SERVER_ENDPOINT=http://localhost:4000/
 REACT_APP_GA_TRACKING_ID=
+
+SASS_PATH=./node_modules
