--- a/package.json
+++ b/package.json
@@ -56,13 +56,12 @@
     "eslint-config-prettier": "^3.1.0",
     "eslint-plugin-prettier": "^3.0.0",
     "node-sass": "^4.9.4",
-    "prettier": "^1.14.3",
-    "react-app-rewired": "^1.6.2"
+    "prettier": "^1.14.3"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "lint": "eslint src",
     "prettify": "prettier --write src/*.js src/**/*.js"
   },
