WIP Add Carousel

--- a/package.json
+++ b/package.json
@@ -48,10 +48,12 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
+    "react-slick": "^0.23.2",
     "react-touch": "^0.4.4",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
-    "redux-persist": "^5.10.0"
+    "redux-persist": "^5.10.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "classnames": "^2.2.6",
