--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "heap": "^0.2.6",
     "immer": "^1.7.2",
     "immutability-helper": "^2.8.1",
+    "interval-tree-1d": "^1.0.3",
     "lodash": "^4.17.11",
     "memoize-one": "^4.0.2",
     "pepjs": "^0.4.3",
