--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-alert": "^4.0.4",
     "react-alert-template-basic": "^1.0.0",
     "react-apollo": "^2.2.4",
+    "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.0",
     "react-ga": "^2.5.3",
