--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "react-modal": "^3.6.1",
     "react-multi-email": "^0.3.8",
     "react-redux": "^5.1.1",
-    "react-router-dom": "^4.3.1",
+    "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "^2.1.1",
     "react-slick": "^0.23.2",
     "react-transition-group": "^1.2.1",
