--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.4.0-beta.6",
     "react-scripts": "^2.1.1",
+    "react-scroll-sync": "^0.7.0",
     "react-slick": "^0.23.2",
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
