--- a/package.json
+++ b/package.json
@@ -19,11 +19,17 @@
     "@material/react-tab-bar": "^0.6.1",
     "@material/react-text-field": "^0.6.1",
     "@material/typography": "^0.40.1",
-    "apollo-cache-inmemory": "^1.3.8",
-    "apollo-client": "^2.4.5",
-    "apollo-link": "^1.2.3",
-    "apollo-link-error": "^1.1.1",
-    "apollo-link-http": "^1.5.5",
+    "@types/graphql": "^14.0.3",
+    "@types/node": "^10.12.11",
+    "@types/react": "^16.7.11",
+    "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^6.0.10",
+    "@types/react-router-dom": "^4.3.1",
+    "apollo-cache-inmemory": "^1.3.11",
+    "apollo-client": "^2.4.7",
+    "apollo-link": "^1.2.4",
+    "apollo-link-error": "^1.1.2",
+    "apollo-link-http": "^1.5.7",
     "babel-loader": "^8.0.4",
     "cra-append-sw": "^2.6.0",
     "date-fns": "^1.29.0",
@@ -40,7 +46,7 @@
     "query-string": "^6.2.0",
     "quickselect": "^2.0.0",
     "react": "^16.6.3",
-    "react-apollo": "^2.2.4",
+    "react-apollo": "^2.3.2",
     "react-copy-to-clipboard": "^5.0.1",
     "react-day-picker": "^7.2.4",
     "react-dom": "^16.6.3",
@@ -56,7 +62,8 @@
     "react-transition-group": "^1.2.1",
     "redux": "^4.0.1",
     "redux-persist": "^5.10.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "typescript": "^3.2.1"
   },
   "devDependencies": {
     "classnames": "^2.2.6",
